[package]
authors = ["The Pony Project Developers"]
name = "pony-playpen"
version = "0.1.0"

[dependencies]
env_logger = "0.3.3"
libc = "0.2.12"
log = "0.3.6"
lru-cache = "0.0.7"
rocket = "0.3.0"
rocket_codegen = "0.3.0"
rocket_contrib = "0.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
wait-timeout = "0.1"
