[package]
authors = ["The Pony Project Developers"]
description = "A web interface for running Pony code"
license = "MIT"
name = "pony-playground"
version = "0.1.0"

[dependencies]
env_logger = "0.6.0"
hubcaps = "0.5.0"
libc = "0.2.0"
log = "0.4.0"
rocket = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
tokio = "0.1"
wait-timeout = "0.2"
url = "1.7"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]
